Implement guestbook feature with form submission and local storage

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="nav-left">
           <ul>
             <li>
-              <a href="#"
+              <a href="#" data-page="gastbok.html"
                 ><img src="pics/guestbook.gif" alt="Gästbok" class="guestbook"
               /></a>
             </li>
