--- a/kunskap.html
+++ b/kunskap.html
@@ -1,4 +1,4 @@
-<aside class="aside"><h2>KUNSKAP</h2></aside>
+<header class="section-header"><h2>Kunskap</h2></header>
 <div class="main-info">
   <p>Här listar jag mina färdigheter...</p>
 </div>
