--- a/om-mig.html
+++ b/om-mig.html
@@ -1,8 +1,6 @@
-<aside class="aside">
-  <h2>OM MIG</h2>
-</aside>
+<header class="section-header"><h2>Om mig</h2></header>
 <div class="infoandpic">
-  <div class="profile-pic">
+  <div class="me-pic">
     <img src="pics/me.JPG" alt="Profilbild" />
   </div>
   <div class="main-info">
