--- a/portfolj.html
+++ b/portfolj.html
@@ -1,4 +1,4 @@
-<aside class="aside"><h2>PORTFÖLJ</h2></aside>
+<header class="section-header"><h2>Portfölj</h2></header>
 <div class="main-info">
   <p>Här är några av mina projekt...</p>
 </div>
