--- a/kontakt.html
+++ b/kontakt.html
@@ -1,4 +1,4 @@
-<aside class="aside"><h2>Kontakt</h2></aside>
+<header class="section-header"><h2>Kontakt</h2></header>
 <div class="main-info">
   <p>Kontaktfomulär</p>
 </div>
