--- a/referens.html
+++ b/referens.html
@@ -1,4 +1,4 @@
-<aside class="aside"><h2>Referens</h2></aside>
+<header class="section-header"><h2>Referens</h2></header>
 <div class="main-info">
   <p>Här är några av mina REFERENSER...</p>
 </div>
