Add weather icons and update HTML structure for improved layout

--- a/index.html
+++ b/index.html
@@ -9,16 +9,12 @@
   <body>
     <div class="container">
       <header class="header">
-        <div class="header-left">
+        <div id="left-top-header">
           <h1 class="fname">JON</h1>
           <h1 class="lname">JOHANSSON</h1>
         </div>
-        <div class="header-right">
-          <h1>PORTFOLIO</h1>
-        </div>
-      </header>
-      <nav class="nav">
-        <div class="nav-left">
+        <div id="right-top-header"></div>
+        <div id="left-bottom-header">
           <ul>
             <li>
               <a href="#" data-page="gastbok.html"
@@ -42,20 +38,18 @@
             </li>
           </ul>
         </div>
-        <div class="nav-middle">
-          <ul>
-            <li><a href="#" data-page="om-mig.html">Om mig</a></li>
-            <li><a href="#" data-page="kunskap.html">Kunskap</a></li>
-            <li><a href="#" data-page="portfolj.html">Portfölj</a></li>
-            <li><a href="#" data-page="referens.html">Referens</a></li>
-            <li><a href="#" data-page="kontakt.html">Kontakt</a></li>
-          </ul>
+        <div id="right-bottom-header">
+          <h1>PORTFOLIO</h1>
         </div>
-        <div class="nav-right">
-          <ul>
-            <li><a href="#">X</a></li>
-          </ul>
-        </div>
+      </header>
+      <nav class="nav">
+        <ul>
+          <li id="left-li"><a href="#" data-page="om-mig.html">Om mig</a></li>
+          <li><a href="#" data-page="kunskap.html">Kunskap</a></li>
+          <li><a href="#" data-page="portfolj.html">Portfölj</a></li>
+          <li><a href="#" data-page="referens.html">Referens</a></li>
+          <li><a href="#" data-page="kontakt.html">Kontakt</a></li>
+        </ul>
       </nav>
       <main id="content">
         <!-- Content -->
