--- a/index.html
+++ b/index.html
@@ -9,28 +9,32 @@
   <body>
     <div class="container">
       <header class="header">
-        <div id="left-top-header">
-          <h1 class="fname">JON</h1>
-          <h1 class="lname">JOHANSSON</h1>
+        <div id="headerbox1">
+          <h1 id="fname" data-text="JON">JON</h1>
+          <h1 id="lname">JOHANSSON</h1>
         </div>
-        <div id="right-top-header"></div>
-        <div id="left-bottom-header">
+        <div id="headerbox2"></div>
+        <div id="headerbox3"></div>
+        <div id="headerbox4">
           <ul>
             <li>
               <a href="#" data-page="gastbok.html"
                 ><img src="pics/guestbook.gif" alt="Gästbok" class="guestbook"
               /></a>
             </li>
+            <li class="seperator">&#x205E;</li>
             <li>
               <a href="#"
                 ><img src="pics/bottle.png" alt="Flaska" class="bottle"
               /></a>
             </li>
+            <li class="seperator">&#x205E;</li>
             <li>
               <a href="#"
                 ><img src="pics/pens.png" alt="Pennor" class="pens"
               /></a>
             </li>
+            <li class="seperator">&#x205E;</li>
             <li>
               <a href="#"
                 ><img src="pics/heart.png" alt="Hjärta" class="heart"
@@ -38,24 +42,30 @@
             </li>
           </ul>
         </div>
-        <div id="right-bottom-header">
+        <div id="headerbox5">
           <h1>PORTFOLIO</h1>
         </div>
+        <div id="headerbox6"></div>
+        <div id="headerbox7">
+          <nav class="nav">
+            <ul>
+              <li id="left-li">
+                <a href="#" data-page="om-mig.html">Om mig</a>
+              </li>
+              <li><a href="#" data-page="kunskap.html">Kunskap</a></li>
+              <li><a href="#" data-page="portfolj.html">Portfölj</a></li>
+              <li><a href="#" data-page="referens.html">Referens</a></li>
+              <li><a href="#" data-page="kontakt.html">Kontakt</a></li>
+            </ul>
+          </nav>
+        </div>
       </header>
-      <nav class="nav">
-        <ul>
-          <li id="left-li"><a href="#" data-page="om-mig.html">Om mig</a></li>
-          <li><a href="#" data-page="kunskap.html">Kunskap</a></li>
-          <li><a href="#" data-page="portfolj.html">Portfölj</a></li>
-          <li><a href="#" data-page="referens.html">Referens</a></li>
-          <li><a href="#" data-page="kontakt.html">Kontakt</a></li>
-        </ul>
-      </nav>
       <main id="content">
         <!-- Content -->
       </main>
       <footer class="footer">
         <p>Jon Johansson, Domsjö - 2025</p>
+        <p class="fancy-text"><span class="text-outline">PLEJS</span>PLEJS</p>
       </footer>
     </div>
     <script src="script.js"></script>
