``` No code changes detected ```

--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
         <div id="headerbox4">
           <ul>
             <li>
-              <a href="#" data-page="gastbok.html"
+              <a href="#" data-page="referens.html"
                 ><img src="pics/guestbook.gif" alt="Gästbok" class="guestbook"
               /></a>
             </li>
             <li class="seperator">&#x205E;</li>
             <li>
-              <a href="#"
+              <a href="#" data-page="kontakt.html"
                 ><img src="pics/bottle.png" alt="Flaska" class="bottle"
               /></a>
             </li>
             <li class="seperator">&#x205E;</li>
             <li>
-              <a href="#"
+              <a href="#" data-page="kunskap.html"
                 ><img src="pics/pens.png" alt="Pennor" class="pens"
               /></a>
             </li>
             <li class="seperator">&#x205E;</li>
             <li>
-              <a href="#"
+              <a href="#" data-page="om-mig.html"
                 ><img src="pics/heart.png" alt="Hjärta" class="heart"
               /></a>
             </li>
