--- a/referens.html
+++ b/referens.html
@@ -4,7 +4,7 @@
     <ul id="entries-list"></ul>
   </div>
   <form id="guestbook-form">
-    <header class="section-header"><h2>INLÄGG</h2></header>
+    <header class="form-header"><h2>INLÄGG</h2></header>
     <div class="alias-container">
       <label for="name">ALIAS:</label>
       <input type="text" id="name" required />
