Guestbook becomes Reference page. Fixed "etries" and nice css

--- a/index.html
+++ b/index.html
@@ -18,26 +18,29 @@
         <div id="headerbox4">
           <ul>
             <li>
-              <a href="#" data-page="referens.html"
-                ><img src="pics/guestbook.gif" alt="Gästbok" class="guestbook"
+              <a href="#" data-page="referens.html" id="guestbook-link"
+                ><img
+                  src="pics/guestbook.gif"
+                  alt="Gästbok"
+                  class="guestbook-logo"
               /></a>
             </li>
             <li class="seperator">&#x205E;</li>
             <li>
               <a href="#" data-page="kontakt.html"
-                ><img src="pics/bottle.png" alt="Flaska" class="bottle"
+                ><img src="pics/bottle.png" alt="Flaska" class="bottle-logo"
               /></a>
             </li>
             <li class="seperator">&#x205E;</li>
             <li>
               <a href="#" data-page="kunskap.html"
-                ><img src="pics/pens.png" alt="Pennor" class="pens"
+                ><img src="pics/pens.png" alt="Pennor" class="pens-logo"
               /></a>
             </li>
             <li class="seperator">&#x205E;</li>
             <li>
               <a href="#" data-page="om-mig.html"
-                ><img src="pics/heart.png" alt="Hjärta" class="heart"
+                ><img src="pics/heart.png" alt="Hjärta" class="heart-logo"
               /></a>
             </li>
           </ul>
