contact form and weather-API addeed

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <a href="#" data-page="om-mig.html">Om mig</a>
               </li>
               <li><a href="#" data-page="kunskap.html">Kunskap</a></li>
-              <li><a href="#" data-page="portfolj.html">Portfölj</a></li>
+              <li><a href="#" data-page="portfolj.html">PortfÖlj</a></li>
               <li><a href="#" data-page="referens.html">Referens</a></li>
               <li><a href="#" data-page="kontakt.html">Kontakt</a></li>
             </ul>
