--- a/referens.html
+++ b/referens.html
@@ -34,24 +34,24 @@
   <form id="guestbook-form">
     <header class="form-header"><h2>INLÄGG</h2></header>
     <div class="alias-container">
-      <label for="name">ALIAS:</label>
+      <label class="form-label" for="name">ALIAS:</label>
       <input type="text" id="name" required />
     </div>
     <div class="gender-age-container">
       <div class="gender-container">
-        <label for="gender">KÖN:</label>
+        <label class="form-label" for="gender">KÖN:</label>
         <select id="gender" required>
           <option value="Man">Man</option>
           <option value="Kvinna">Kvinna</option>
         </select>
       </div>
       <div class="age-container">
-        <label for="age">ÅLDER:</label>
+        <label class="form-label" for="age">ÅLDER:</label>
         <input type="number" id="age" min="0" required />
       </div>
     </div>
     <div class="message-container">
-      <label for="message">INLÄGG:</label>
+      <label class="form-label" for="message">INLÄGG:</label>
       <textarea id="message" required></textarea>
     </div>
     <div class="button-container">
