Added knowledge-page with text and picture.

--- a/kunskap.html
+++ b/kunskap.html
@@ -1,4 +1,17 @@
 <header class="section-header"><h2>Kunskap</h2></header>
-<div class="main-info">
-  <p>Här listar jag mina färdigheter...</p>
-</div>
+
+<section id="knowledge">
+  <div id="knowledge-text">
+    <p class="alias">Utbildas till .NET-utvecklare 2024-2026</p>
+    <p id="">Erfarenherter inom:</p>
+    <ul>
+      <li>C#</li>
+      <li>Java</li>
+      <li>SQL</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+    </ul>
+  </div>
+  <img id="knowledge-pic" src="pics/objects.png" alt="Icons" />
+</section>
