--- a/om-mig.html
+++ b/om-mig.html
@@ -4,11 +4,10 @@
     <img src="pics/me.JPG" alt="Profilbild" />
   </div>
   <div class="main-info">
+    <p>Välkommen in i värmen och till mitt krypin!</p>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia ipsa
-      inventore laudantium unde, repudiandae fugit quae quo non magni fuga
-      dolorum dolores nisi veritatis! Ipsa dolorem quam voluptatem mollitia
-      repellendus!
+      Jag heter Jon och är en blivande .NET-utvecklare från Örnsköldsvik. Jag
+      gillar att bygga, testa och förbättra - både kod och idéer!"
     </p>
   </div>
 </div>
