--- a/portfolj.html
+++ b/portfolj.html
@@ -1,4 +1,32 @@
-<header class="section-header"><h2>Portfölj</h2></header>
-<div class="main-info">
-  <p>Här är några av mina projekt...</p>
-</div>
+<header class="section-header"><h2>PortfÖlj</h2></header>
+<section id="portfolio-container">
+  <div class="portfolio-box">
+    <p id="portfolio-header">Här hittar du länkar till tidigare projekt.</p>
+  </div>
+  <div class="portfolio-box">
+    <a
+      href="https://github.com/JonAndersJohansson/CashRegister"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      <button class="portfolio-button">Kassasystem</button>
+    </a>
+    <p class="portfolio-text">Länk till Github - ConsolApp, C#</p>
+  </div>
+  <div class="portfolio-box">
+    <a
+      href="https://github.com/JonAndersJohansson/HotelApp"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      <button class="portfolio-button">HotellApp</button>
+    </a>
+    <p class="portfolio-text">Länk till Github - ConsolApp, C# mot databas</p>
+  </div>
+  <div class="portfolio-box">
+    <a href="CV-JonJohansson.pdf" download>
+      <button class="portfolio-button">CV</button>
+    </a>
+    <p class="portfolio-text">Ladda ham fullständigt CV</p>
+  </div>
+</section>
