Enhanced portfolio layout with project links and CV download option; added new SVG icons.

--- a/kunskap.html
+++ b/kunskap.html
@@ -2,7 +2,7 @@
 
 <section id="knowledge">
   <div id="knowledge-text">
-    <p class="alias">Utbildas till .NET-utvecklare 2024-2026</p>
+    <p class="alias">Jag utbildas till .NET-utvecklare 2024-2026</p>
     <p id="">Erfarenherter inom:</p>
     <ul>
       <li>C#</li>
