--- a/portfolj.html
+++ b/portfolj.html
@@ -1,32 +1,40 @@
 <header class="section-header"><h2>PortfÖlj</h2></header>
 <section id="portfolio-container">
-  <div class="portfolio-box">
-    <p id="portfolio-header">Här hittar du länkar till tidigare projekt.</p>
-  </div>
-  <div class="portfolio-box">
-    <a
-      href="https://github.com/JonAndersJohansson/CashRegister"
-      target="_blank"
-      rel="noopener noreferrer"
-    >
-      <button class="portfolio-button">Kassasystem</button>
-    </a>
-    <p class="portfolio-text">Länk till Github - ConsolApp, C#</p>
-  </div>
-  <div class="portfolio-box">
-    <a
-      href="https://github.com/JonAndersJohansson/HotelApp"
-      target="_blank"
-      rel="noopener noreferrer"
-    >
-      <button class="portfolio-button">HotellApp</button>
-    </a>
-    <p class="portfolio-text">Länk till Github - ConsolApp, C# mot databas</p>
-  </div>
-  <div class="portfolio-box">
-    <a href="CV-JonJohansson.pdf" download>
-      <button class="portfolio-button">CV</button>
-    </a>
-    <p class="portfolio-text">Ladda ham fullständigt CV</p>
-  </div>
+  <p class="alias">Hämta CV eller titta på några av mina tidigare projekt.</p>
+  <ul class="portfolio-ul">
+    <li class="portfolio-li">
+      <a
+        href="https://github.com/JonAndersJohansson/HotelApp"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <button class="portfolio-button">
+          <img src="pics/github.svg" alt="github" class="github-button-img" />
+        </button>
+      </a>
+      <p class="portfolio-text">
+        GitHub-länk, HotellApp - Console App, C# mot databas
+      </p>
+    </li>
+    <li class="portfolio-li">
+      <a
+        href="https://github.com/JonAndersJohansson/CashRegister"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <button class="portfolio-button">
+          <img src="pics/github.svg" alt="github" class="github-button-img" />
+        </button>
+      </a>
+      <p class="portfolio-text">GitHub-länk, Kassasystem - Console App, C#</p>
+    </li>
+    <li class="portfolio-li">
+      <a href="CV-JonJohansson.pdf" download>
+        <button class="portfolio-button">
+          <img src="pics/doc.svg" alt="document" id="doc-button-img" />
+        </button>
+      </a>
+      <p class="portfolio-text">Ladda hem CV & personligt brev</p>
+    </li>
+  </ul>
 </section>
