Updated portfolio section styling by changing class from 'alias' to 'p-blue' for improved visual consistency.

--- a/portfolj.html
+++ b/portfolj.html
@@ -1,6 +1,6 @@
 <header class="section-header"><h2>PortfÖlj</h2></header>
 <section id="portfolio-container">
-  <p class="alias">Hämta CV eller titta på några av mina tidigare projekt.</p>
+  <p class="p-blue">Hämta CV eller titta på några av mina tidigare projekt.</p>
   <ul class="portfolio-ul">
     <li class="portfolio-li">
       <a
