--- a/kontakt.html
+++ b/kontakt.html
@@ -1,23 +1,20 @@
 <header class="section-header"><h2>Kontakt</h2></header>
 <section id="contact">
   <div id="contact-info">
-    <div class="contact-row">
-      <p class="alias">Mail:</p>
-      <p class="margin-p">jonjohansson88@gmail.com</p>
+    <div class="contact-details">
+      <ul id="contact-ul">
+        <li>
+          <button id="mail-button">
+            <img src="/pics/mail.svg" alt="Mail" />
+          </button>
+          <p class="margin-p">jonjohansson88@gmail.com</p>
+        </li>
+      </ul>
     </div>
-    <div class="contact-row">
-      <p class="alias">Telnr:</p>
-      <p class="margin-p">0703792074</p>
-    </div>
-    <div id="linkedin-weather-container">
-      <a href="https://www.linkedin.com">
-        <img src="pics/linkedin.png" alt="linkedin" id="linkedin-logo" />
-      </a>
-      <div id="weather-container">
-        <p class="alias">Domsjö idag</p>
-        <img id="weatherImage" src="" alt="Väderbild" />
-        <p id="weatherInfo">Hämtar väder...</p>
-      </div>
+    <div id="weather-container">
+      <p class="alias">Domsjö idag</p>
+      <img id="weatherImage" src="" alt="Väderbild" />
+      <p id="weatherInfo">Hämtar väder...</p>
     </div>
   </div>
   <form
