Refactor portfolio section: replace outdated SVG icons, remove unused files, and enhance layout styling for improved user experience.

--- a/portfolj.html
+++ b/portfolj.html
@@ -1,37 +1,38 @@
+<!DOCTYPE html>
 <header class="section-header"><h2>PortfÖlj</h2></header>
 <section id="portfolio-container">
   <p class="p-blue">Hämta CV eller titta på några av mina tidigare projekt.</p>
   <ul class="portfolio-ul">
-    <li class="portfolio-li">
+    <li>
       <a
         href="https://github.com/JonAndersJohansson/HotelApp"
         target="_blank"
         rel="noopener noreferrer"
       >
         <button class="portfolio-button">
-          <img src="pics/github.svg" alt="github" class="github-button-img" />
+          <img src="pics/github.svg" alt="GitHub-länk" class="github-icon" />
         </button>
       </a>
       <p class="portfolio-text">
         GitHub-länk, HotellApp - Console App, C# mot databas
       </p>
     </li>
-    <li class="portfolio-li">
+    <li>
       <a
         href="https://github.com/JonAndersJohansson/CashRegister"
         target="_blank"
         rel="noopener noreferrer"
       >
         <button class="portfolio-button">
-          <img src="pics/github.svg" alt="github" class="github-button-img" />
+          <img src="pics/github.svg" alt="GitHub-länk" class="github-icon" />
         </button>
       </a>
       <p class="portfolio-text">GitHub-länk, Kassasystem - Console App, C#</p>
     </li>
-    <li class="portfolio-li">
+    <li>
       <a href="CV-JonJohansson.pdf" download>
         <button class="portfolio-button">
-          <img src="pics/doc.svg" alt="document" id="doc-button-img" />
+          <img src="pics/cv.svg" alt="CV-Logo" id="cv-icon" />
         </button>
       </a>
       <p class="portfolio-text">Ladda hem CV & personligt brev</p>
