--- a/kunskap.html
+++ b/kunskap.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <header class="section-header"><h2>Kunskap</h2></header>
 <section id="knowledge">
   <p class="p-blue">Utbildas till .NET-utvecklare 2024-2026</p>
