Fixed wrong spelling

--- a/kunskap.html
+++ b/kunskap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <header class="section-header"><h2>Kunskap</h2></header>
 <section id="knowledge">
-  <p class="p-blue">Utbildas till .NET-utvecklare 2024-2026</p>
+  <p class="p-blue">Jag utbildas till .NET-utvecklare 2024-2026</p>
   <div id="text-and-img">
     <span id="knowledge-text">
       <p id="">Erfarenherter inom:</p>
