--- a/portfolj.html
+++ b/portfolj.html
@@ -30,7 +30,7 @@
       <p class="portfolio-text">GitHub-länk, Kassasystem - Console App, C#</p>
     </li>
     <li>
-      <a href="CV-JonJohansson.pdf" download>
+      <a href="CV_Jon_Johansson.pdf" download>
         <button class="portfolio-button">
           <img src="pics/cv.svg" alt="CV-Logo" id="cv-icon" />
         </button>
