Update LinkedIn link in kontakt.html

--- a/kontakt.html
+++ b/kontakt.html
@@ -18,7 +18,7 @@
         </li>
         <li>
           <a
-            href="https://linkedin.com"
+            href="https://www.linkedin.com/in/jon-johansson-1883912ab/"
             target="_blank"
             rel="noopener noreferrer"
           >
