Refactor kontakt.html and referens.html for improved form structure and accessibility; update style.css for enhanced responsiveness and layout adjustments

--- a/kontakt.html
+++ b/kontakt.html
@@ -58,10 +58,15 @@
     </div>
     <div id="contact-message">
       <label class="form-label" for="meddelande">Meddelande:</label>
-      <textarea id="message" name="meddelande" rows="5" required></textarea>
+      <textarea
+        id="contact-message-input"
+        name="meddelande"
+        rows="5"
+        required
+      ></textarea>
     </div>
     <div class="button-container">
-      <button class="submit-button" type="submit">Skicka meddelande</button>
+      <button class="submit-button" type="submit">Skicka meddelande ▶▶▶</button>
     </div>
   </form>
 </section>
