--- a/referens.html
+++ b/referens.html
@@ -34,25 +34,25 @@
   <form id="guestbook-form">
     <header class="form-header"><h2>INLÄGG</h2></header>
     <div class="alias-container">
-      <label class="form-label" for="name">ALIAS:</label>
+      <label class="form-label" for="name">Alias:</label>
       <input type="text" id="name" required />
     </div>
     <div class="gender-age-container">
       <div class="gender-container">
-        <label class="form-label" for="gender">KÖN:</label>
+        <label class="form-label" for="gender">Kön:</label>
         <select id="gender" required>
           <option value="Man">Man</option>
           <option value="Kvinna">Kvinna</option>
         </select>
       </div>
       <div class="age-container">
-        <label class="form-label" for="age">ÅLDER:</label>
+        <label class="form-label" for="age">Ålder:</label>
         <input type="number" id="age" min="0" required />
       </div>
     </div>
     <div class="referece-message-container">
-      <label class="form-label" for="message">INLÄGG:</label>
-      <textarea id="reference-message-input" rows="5" required></textarea>
+      <label class="form-label" for="message">Inlägg:</label>
+      <textarea id="reference-message-input" rows="3" required></textarea>
     </div>
     <div class="button-container">
       <button class="submit-button" type="submit">SKICKA INLÄGGET ▶▶▶</button>
