Refactor HTML headers for consistency and accessibility; update button text for clarity and improve form structure in multiple files

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
   <body>
     <div class="container">
       <header class="header">
+        <div id="headerbox0"></div>
         <div id="headerbox1">
-          <h1 id="fname" data-text="JON">JON</h1>
-          <h1 id="lname">JOHANSSON</h1>
+          <a href="index.html" id="start-page">
+            <h1 id="fname" data-text="JON">JON</h1>
+            <h1 id="lname">JOHANSSON</h1>
+          </a>
         </div>
         <div id="headerbox2"></div>
         <div id="headerbox3"></div>
@@ -53,12 +56,12 @@
           <nav class="nav">
             <ul>
               <li id="left-li">
-                <a href="#" data-page="om-mig.html">Om mig</a>
+                <a href="#" data-page="om-mig.html">OM MIG</a>
               </li>
-              <li><a href="#" data-page="kunskap.html">Kunskap</a></li>
-              <li><a href="#" data-page="portfolj.html">PortfÖlj</a></li>
-              <li><a href="#" data-page="referens.html">Referens</a></li>
-              <li><a href="#" data-page="kontakt.html">Kontakt</a></li>
+              <li><a href="#" data-page="kunskap.html">KUNSKAP</a></li>
+              <li><a href="#" data-page="portfolj.html">PORTFÖLJ</a></li>
+              <li><a href="#" data-page="referens.html">REFERENS</a></li>
+              <li><a href="#" data-page="kontakt.html">KONTAKT</a></li>
             </ul>
           </nav>
         </div>
