--- a/kontakt.html
+++ b/kontakt.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<header class="section-header"><h2>Kontakt</h2></header>
+<header class="section-header"><h2>KONTAKT</h2></header>
 <section id="contact">
   <div id="contact-info">
     <div class="contact-details">
@@ -45,7 +45,7 @@
     method="post"
     enctype="text/plain"
   >
-    <header class="form-header"><h2>KontaktformulÄr</h2></header>
+    <header class="form-header"><h2>KONTAKTFORMULÄR</h2></header>
     <div id="contact-input">
       <div id="form-column">
         <label class="form-label" for="namn">Namn:</label>
@@ -66,7 +66,9 @@
       ></textarea>
     </div>
     <div class="button-container">
-      <button class="submit-button" type="submit">Skicka meddelande ▶▶▶</button>
+      <button class="submit-button" type="submit">
+        SKICKA MEDDELANDE <span class="small-arrows">▶▶▶</span>
+      </button>
     </div>
   </form>
 </section>
