--- a/om-mig.html
+++ b/om-mig.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<header class="section-header"><h2>Om mig</h2></header>
+<header class="section-header"><h2>OM MIG</h2></header>
 <div class="infoandpic">
-  <div class="me-pic">
-    <img src="pics/me.JPG" alt="Profilbild" />
-  </div>
+  <!-- <div class="me-pic"> -->
+  <img src="pics/me2.png" alt="Profilbild" id="me-img" />
+  <!-- </div> -->
   <div class="main-info">
     <p>Välkommen in i värmen och till mitt krypin!</p>
     <p>
       Jag heter Jon och är en blivande .NET-utvecklare från Örnsköldsvik. Jag
-      gillar att bygga, testa och förbättra - både kod och idéer!"
+      gillar att bygga, testa och förbättra – både kod och idéer! Just nu
+      utvecklar jag mina färdigheter inom både frontend och backend och ser fram
+      emot att skapa robusta, effektiva och användarvänliga system.
     </p>
   </div>
 </div>
