--- a/portfolj.html
+++ b/portfolj.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<header class="section-header"><h2>PortfÖlj</h2></header>
+<header class="section-header"><h2>PORTFÖLJ</h2></header>
 <section id="portfolio-container">
   <p class="p-blue">Hämta CV eller titta på några av mina tidigare projekt.</p>
   <ul class="portfolio-ul">
