--- a/kunskap.html
+++ b/kunskap.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<header class="section-header"><h2>Kunskap</h2></header>
+<header class="section-header"><h2>KUNSKAP</h2></header>
 <section id="knowledge">
   <p class="p-blue">Jag utbildas till .NET-utvecklare 2024-2026</p>
   <div id="text-and-img">
