Enhance kontakt.html and portfolj.html with new portfolio links and improve form labels; update style.css for icon responsiveness and add azure.svg

--- a/portfolj.html
+++ b/portfolj.html
@@ -5,7 +5,35 @@
   <ul class="portfolio-ul">
     <li>
       <a
-        href="https://github.com/JonAndersJohansson/HotelApp"
+        href="https://domsjopingis-czdfedh4f6b6b0ec.swedencentral-01.azurewebsites.net/"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <button class="portfolio-button">
+          <img src="pics/azure.svg" alt="Azure-länk" class="azure-icon" />
+        </button>
+      </a>
+      <p class="portfolio-text">
+        Azure-länk, Domsjö Pingisklubb - WebbApp, C# .NET Core, inkl DB
+      </p>
+    </li>
+    <li>
+      <a
+        href="https://aurorabank-gjdmc9f6eefvdza3.swedencentral-01.azurewebsites.net/"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <button class="portfolio-button">
+          <img src="pics/azure.svg" alt="Azure-länk" class="azure-icon" />
+        </button>
+      </a>
+      <p class="portfolio-text">
+        Azure-länk, AuroraBank - WebbApp, C# .NET Core, inkl DB
+      </p>
+    </li>
+    <li>
+      <a
+        href="https://github.com/JonAndersJohansson/MultiToolConsoleApp"
         target="_blank"
         rel="noopener noreferrer"
       >
@@ -14,12 +42,12 @@
         </button>
       </a>
       <p class="portfolio-text">
-        GitHub-länk, HotellApp - Console App, C# mot databas
+        GitHub-repo, enkel Console App med fokus på arkitektur
       </p>
     </li>
     <li>
       <a
-        href="https://github.com/JonAndersJohansson/CashRegister"
+        href="https://github.com/JonAndersJohansson/MarketAPI"
         target="_blank"
         rel="noopener noreferrer"
       >
@@ -27,7 +55,7 @@
           <img src="pics/github.svg" alt="GitHub-länk" class="github-icon" />
         </button>
       </a>
-      <p class="portfolio-text">GitHub-länk, Kassasystem - Console App, C#</p>
+      <p class="portfolio-text">GitHub-repo, enkelt RESTful .NET Web API</p>
     </li>
     <li>
       <a href="CV_Jon_Johansson.pdf" download>
