--- a/kontakt.html
+++ b/kontakt.html
@@ -30,6 +30,7 @@
               />
             </button>
           </a>
+          <p class="margin-p">← Länk LinkedIn</p>
         </li>
       </ul>
     </div>
@@ -42,7 +43,7 @@
     <header class="form-header"><h2>KONTAKTFORMULÄR</h2></header>
     <div id="contact-input">
       <div id="form-column">
-        <label class="form-label" for="name">Namn:</label>
+        <label class="form-label">Namn:</label>
         <input type="text" id="namn" name="name" autocomplete="name" required />
         <input type="hidden" name="_captcha" value="true" />
         <label class="form-label" for="email">E-post:</label>
